--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!-- Hero Talkie -->
           <div class="container hero-section">
                <div class="row mt-5">
-                    <div class="col-md-7 mt-md-5 text-white">
+                    <div class="col-md-7 mt-md-5 text-white text-center text-md-left">
                          <div>
                               <h1 class="display-4 section-title">Lorem ipsum dolor sit amet.</h1>
                               <p class="lead section-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, omnis?</p>
@@ -41,7 +41,7 @@
                          </div>
                     </div>
 
-                    <div class="col-md-5 text-right d-none d-md-block">
+                    <div class="col-md-5 text-md-right text-center mt-5 mt-md-0">
                          <img src="./dist/img/mobile.png" alt="" style="width: 250px;">
                     </div>
                </div>
@@ -53,8 +53,8 @@
      <!-- Why Choose Us? -->
      <div class="container">
           <h3 class="text-center display-4 section-title">Why?</h3>
-          <div class="row d-flex justify-content-between mt-5">
-               <div class="col-md-4 abality-wrap mb-5">
+          <div class="row mt-5">
+               <div class="col abality-wrap mb-5">
                     <div class="card bg-transparent abality-card">
                          <div class="card-body text-center position-relative">
                               <span class="abality-icon">
@@ -64,7 +64,7 @@
                          </div>
                     </div>
                </div>
-               <div class="col-md-4 abality-wrap mb-5">
+               <div class="col abality-wrap mb-5">
                     <div class="card bg-transparent abality-card">
                          <div class="card-body text-center position-relative">
                               <span class="abality-icon">
@@ -74,7 +74,7 @@
                          </div>
                     </div>
                </div>
-               <div class="col-md-4 col-12 abality-wrap">
+               <div class="col abality-wrap">
                     <div class="card bg-transparent abality-card">
                          <div class="card-body text-center position-relative">
                               <span class="abality-icon">
