--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           <!-- navigator -->
           <ul class="nav justify-content-end py-3">
                <li class="nav-item mx-3 neo-btn">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link text-white" href="#">Active</a>
                </li>
                <li class="nav-item mx-3 neo-btn">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link text-white" href="#">Link</a>
                </li>
           </ul>
 
@@ -42,7 +42,14 @@
                     </div>
 
                     <div class="col-md-5 text-md-right text-center mt-5 mt-md-0">
-                         <img src="./dist/img/mobile.png" alt="" style="width: 250px;">
+                         <div class="phone-container">
+                              <img src="./dist/img/mobile.png" alt="" style="width: 250px;">
+                              <div class="phone-back">
+                                   <div class="phone-content-wrapper w-100 h-100">
+                                        <h3 class="text-white text-center">Hello</h3>
+                                   </div>
+                              </div>
+                         </div>
                     </div>
                </div>
           </div>
@@ -89,7 +96,7 @@
 
 
      <!-- Apps -->
-     <div class="container">
+     <div class="container app-section">
           <h3 class="text-center my-5 display-4 section-title">My Apps</h3>
           <div class="row mt-5 owl-carousel owl-theme m-0">
                <div class="col-md-6 mb-5 item m-auto p-3 bg-transparent">
@@ -126,17 +133,8 @@
 
      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-     <!-- <script src="./dist/app.js"></script> -->
-     <script>
-          $(document).ready(function () {
-               $('.owl-carousel').owlCarousel({
-                    loop: true,
-                    margin: 10,
-                    nav: false,
-                    items: 1
-               })
-          });
-     </script>
+     <script src="./dist/js/app.js"></script>
+
 
 </body>
 
