--- a/index.html
+++ b/index.html
@@ -7,135 +7,145 @@
      <title>App Dowloader</title>
 
      <!-- Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,500;0,700;1,500&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
      <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 
 <body>
-
      <!-- Hero Section -->
-     <div class="container-fluid hero-background p-0 m-0">
-          <!-- navigator -->
-          <ul class="nav justify-content-end py-3">
-               <li class="nav-item mx-3 neo-btn">
-                    <a class="nav-link text-white" href="#">Active</a>
-               </li>
-               <li class="nav-item mx-3 neo-btn">
-                    <a class="nav-link text-white" href="#">Link</a>
-               </li>
-          </ul>
-
-          <!-- Hero Talkie -->
-          <div class="container hero-section">
-               <div class="row mt-5">
-                    <div class="col-md-7 mt-md-5 text-white text-center text-md-left">
-                         <div>
-                              <h1 class="display-4 section-title">Lorem ipsum dolor sit amet.</h1>
-                              <p class="lead section-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, omnis?</p>
-                              <button class="btn btn-lg neo-btn mt-5"><i class="fas fa-download mr-2"></i>Download Now</button>
+     <section class="container-fluid hero-section p-0 m-0 sticky-top">
+          <div class="hero-section-wrapper">
+               <div class="row m-0 p-0 h-100">
+                    <div class="col-12 h-100 d-flex align-items-center justify-content-center">
+                         <div class="hero-text-container text-center text-white">
+                              <h1>App Name Here!</h1>
+                              <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, est.</p>
+                              <button class="btn-lg btn btn-info rounded-pill px-5">Download Now</button>
                          </div>
                     </div>
+               </div>
+          </div>
+     </section>
 
-                    <div class="col-md-5 text-md-right text-center mt-5 mt-md-0">
-                         <div class="phone-container">
-                              <img src="./dist/img/mobile.png" alt="" style="width: 250px;">
-                              <div class="phone-back">
-                                   <div class="phone-content-wrapper w-100 h-100">
-                                        <h3 class="text-white text-center">Hello</h3>
+
+     <!-- Pass Through Section -->
+     <section class="contaier-fluid pass-through bg-white">
+          <!-- App Point -->
+          <div class="container py-3">
+               <div class="row">
+                    <div class="col-md-8 offset-md-2 text-center">
+                         <p class="h3 text-info">Point Of App</p>
+                         <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis obcaecati minima magni iusto fuga.</p>
+                         <div class="row">
+                              <div class="col-6 text-right">
+                                   <div class="card border-0">
+                                        <div class="card-body border-right">
+                                             <p class="h3 text-danger">1,000</p>
+                                             <p class="small m-0">Daily active Users</p>
+                                        </div>
+                                   </div>
+                              </div>
+                              <div class="col-6 text-left">
+                                   <div class="card border-0">
+                                        <div class="card-body border-left">
+                                             <p class="h3 text-danger">1,000</p>
+                                             <p class="small m-0">Daily active Users</p>
+                                        </div>
                                    </div>
                               </div>
                          </div>
                     </div>
+                    <div class="col-12">
+                         <hr>
+                    </div>
                </div>
+
           </div>
 
-     </div>
-
-
-     <!-- Why Choose Us? -->
-     <div class="container">
-          <h3 class="text-center display-4 section-title">Why?</h3>
-          <div class="row mt-5">
-               <div class="col abality-wrap mb-5">
-                    <div class="card bg-transparent abality-card">
-                         <div class="card-body text-center position-relative">
-                              <span class="abality-icon">
-                                   <i class="fas fa-bolt"></i>
-                              </span>
-                              <p class="lead font-weight-bold text-white">FAST</p>
-                         </div>
-                    </div>
-               </div>
-               <div class="col abality-wrap mb-5">
-                    <div class="card bg-transparent abality-card">
-                         <div class="card-body text-center position-relative">
-                              <span class="abality-icon">
-                                   <i class="fas fa-lock"></i>
-                              </span>
-                              <p class="lead font-weight-bold text-white">SECURE</p>
-                         </div>
-                    </div>
-               </div>
-               <div class="col abality-wrap">
-                    <div class="card bg-transparent abality-card">
-                         <div class="card-body text-center position-relative">
-                              <span class="abality-icon">
-                                   <i class="fas fa-brain"></i>
-                              </span>
-                              <p class="lead font-weight-bold text-white">EASY</p>
-                         </div>
-                    </div>
-               </div>
-          </div>
-     </div>
-
-
-     <!-- Apps -->
-     <div class="container app-section">
-          <h3 class="text-center my-5 display-4 section-title">My Apps</h3>
-          <div class="row mt-5 owl-carousel owl-theme m-0">
-               <div class="col-md-6 mb-5 item m-auto p-3 bg-transparent">
-                    <div class="card app-card">
-                         <div class="card-body text-center text-white">
-                              <div class="app-img-wrapper m-auto" style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden;">
-                                   <img src="https://i.picsum.photos/id/1045/3936/2624.jpg?hmac=PMfAbC94Asle_jgeRYsj7zQHFabfTfsIwL247Ewetwc" alt="" class="w-100 h-100">
+          <!-- App Section -->
+          <div class="container app-section py-5">
+               <div class="row owl-carousel owl-theme m-0">
+                    <div class="item col-12">
+                         <div class="row">
+                              <!-- about app -->
+                              <div class="col-12 col-md-6 mb-5 mb-md-0">
+                                   <img src="./dist/img/mobile.png" alt="" style="width: 200px;" class="ml-md-auto m-auto">
                               </div>
-                              <h3 class="mt-3">The Name Of App</h3>
-                              <p class="my-3 px-md-5 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis beatae nostrum quasi perferendis quas itaque necessitatibus, doloremque
-                                   doloribus
-                                   impedit ipsam?</p>
-                              <button class="btn btn-lg neo-btn"><i class="fas fa-download mr-2"></i>Dowoload</button>
-                         </div>
-                    </div>
-               </div>
-               <div class="col-md-6 item m-auto p-3 bg-transparent">
-                    <div class="card app-card">
-                         <div class="card-body text-center text-white">
-                              <div class="app-img-wrapper m-auto" style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden;">
-                                   <img src="https://i.picsum.photos/id/1045/3936/2624.jpg?hmac=PMfAbC94Asle_jgeRYsj7zQHFabfTfsIwL247Ewetwc" alt="" class="w-100 h-100">
+                              <div class="col-12 col-md-6">
+                                   <div class="d-flex mb-5">
+                                        <div class="steps bg-secondary lead">
+                                             1
+                                        </div>
+                                        <div class="pl-2 text-secondary small">
+                                             <p class="h3 text-info">Register</p>
+                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                        </div>
+                                   </div>
+                                   <div class="d-flex mb-5">
+                                        <div class="steps bg-secondary lead">
+                                             1
+                                        </div>
+                                        <div class="pl-2 text-secondary small">
+                                             <p class="h3 text-info">Register</p>
+                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                        </div>
+                                   </div>
+                                   <div class="d-flex mb-5">
+                                        <div class="steps bg-secondary lead">
+                                             1
+                                        </div>
+                                        <div class="pl-2 text-secondary small">
+                                             <p class="h3 text-info">Register</p>
+                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                        </div>
+                                   </div>
                               </div>
-                              <h3 class="mt-3">The Name Of App</h3>
-                              <p class="my-3 px-md-5 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis beatae nostrum quasi perferendis quas itaque necessitatibus, doloremque
-                                   doloribus
-                                   impedit ipsam?</p>
-                              <button class="btn btn-lg neo-btn"><i class="fas fa-download mr-2"></i>Dowoload</button>
+                         </div>
+                         <div class="col-12">
+                              <div class="row d-flex justify-content-center">
+                                   <button class="btn btn-outline-success">
+                                        <i class="fab fa-google-play pr-2"></i>
+                                        Download
+                                   </button>
+                                   <button class="btn btn-outline-success ml-4">
+                                        <i class="fab fa-google-play pr-2"></i>
+                                        Download
+                                   </button>
+                              </div>
                          </div>
                     </div>
                </div>
           </div>
-     </div>
+
+     </section>
+
+     <!-- Footer Section -->
+     <footer class="container-fluid footer-section py-4">
+          <div class="row">
+               <div class="col-12">
+                    <p class="text-center m-0 text-white display-4">APP NAME</p>
+               </div>
+               <div class="col-12 d-flex justify-content-center my-4">
+                    <button class="btn btn-outline-light mx-2">Download</button>
+                    <button class="btn btn-outline-light mx-2">Download</button>
+               </div>
+               <div class="col-12">
+                    <p class="text-white text-center m-0 small">
+                         designed by kaung htet
+                    </p>
+               </div>
+          </div>
+     </footer>
 
 
-     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
      <script src="./dist/js/app.js"></script>
-
-
 </body>
 
 </html>
