--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <title>App Dowloader</title>
 
      <!-- Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500&display=swap" rel="stylesheet">
 
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -39,8 +39,9 @@
           <div class="container py-3">
                <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                         <p class="h3 text-info">Point Of App</p>
-                         <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis obcaecati minima magni iusto fuga.</p>
+                         <p class="h3 text-info font-weight-light">Point Of App</p>
+                         <p class="lead text-secondary font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis obcaecati minima magni
+                              iusto fuga.</p>
                          <div class="row">
                               <div class="col-6 text-right">
                                    <div class="card border-0">
@@ -82,8 +83,8 @@
                                              1
                                         </div>
                                         <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info">Register</p>
-                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                             <p class="h3 text-info font-weight-lighter">Register</p>
+                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                         </div>
                                    </div>
                                    <div class="d-flex mb-5">
@@ -91,8 +92,8 @@
                                              1
                                         </div>
                                         <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info">Register</p>
-                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                             <p class="h3 text-info font-weight-lighter">Register</p>
+                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                         </div>
                                    </div>
                                    <div class="d-flex mb-5">
@@ -100,8 +101,8 @@
                                              1
                                         </div>
                                         <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info">Register</p>
-                                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                             <p class="h3 text-info font-weight-lighter">Register</p>
+                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                         </div>
                                    </div>
                               </div>
@@ -128,15 +129,17 @@
      <footer class="container-fluid footer-section py-4">
           <div class="row">
                <div class="col-12">
-                    <p class="text-center m-0 text-white display-4">APP NAME</p>
+                    <p class="text-center m-0 text-white display-4 font-weight-lighter" style="font-size: 30px;">APP NAME</p>
                </div>
                <div class="col-12 d-flex justify-content-center my-4">
                     <button class="btn btn-outline-light mx-2">Download</button>
                     <button class="btn btn-outline-light mx-2">Download</button>
                </div>
                <div class="col-12">
-                    <p class="text-white text-center m-0 small">
-                         designed by kaung htet
+                    <p class="text-secondary text-center m-0 small font-weight-light">
+                         &copy; 2020 Mobile App, All Rights Reserved.
+                         <br>
+                         Template By: <a href="https://www.facebook.com/tragonn.tonian" class="text-decoration-none ml-1">kaung htet</a>
                     </p>
                </div>
           </div>
