change-main-color

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
      <section class="container-fluid hero-section p-0 m-0 sticky-top">
           <div class="hero-section-wrapper">
                <div class="row m-0 p-0 h-100">
-                    <div class="col-12 h-100 d-flex align-items-center justify-content-center">
-                         <div class="hero-text-container text-center text-white">
+                    <div class="col-12 col-md-6 h-100 d-flex align-items-center justify-content-center">
+                         <div class="hero-text-container text-md-left text-center text-white pl-md-5">
                               <h1>App Name Here!</h1>
                               <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, est.</p>
-                              <button class="btn-lg btn btn-info rounded-pill px-5">Download Now</button>
+                              <button class="btn-lg btn btn-outline-light px-5">Download Now</button>
                          </div>
                     </div>
                </div>
@@ -40,7 +40,7 @@
           <div class="container py-3">
                <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                         <p class="h3 text-info font-weight-light" data-aos="fade-up">Point Of App</p>
+                         <p class="h3 text-primary font-weight-light" data-aos="fade-up">Point Of App</p>
                          <p class="lead text-secondary font-weight-lighter" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis
                               obcaecati minima magni
                               iusto fuga.</p>
@@ -48,7 +48,7 @@
                               <div class="col-6 text-right">
                                    <div class="card border-0" data-aos="zoom-in">
                                         <div class="card-body border-right">
-                                             <p class="h3 text-danger">1,000</p>
+                                             <p class="h3 text-primary font-weight-bold">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
                                         </div>
                                    </div>
@@ -56,7 +56,7 @@
                               <div class="col-6 text-left">
                                    <div class="card border-0" data-aos="zoom-in">
                                         <div class=" card-body border-left">
-                                             <p class="h3 text-danger">1,000</p>
+                                             <p class="h3 text-primary font-weight-bold">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
                                         </div>
                                    </div>
@@ -96,29 +96,29 @@
                                              </div>
                                              <div class="col-12 col-md-6">
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-secondary lead">
+                                                       <div class="steps bg-primary lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-secondary lead">
+                                                       <div class="steps bg-primary lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-secondary lead">
+                                                       <div class="steps bg-primary lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
@@ -126,11 +126,11 @@
                                         </div>
                                         <div class="col-12 mt-4">
                                              <div class="row d-flex justify-content-center">
-                                                  <button class="btn btn-outline-success">
+                                                  <button class="btn btn-outline-primary">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
-                                                  <button class="btn btn-outline-success ml-4">
+                                                  <button class="btn btn-outline-primary ml-4">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
@@ -152,20 +152,20 @@
                                              </div>
                                              <div class="col-12 col-md-6">
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-secondary lead">
+                                                       <div class="steps bg-primary lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-secondary lead">
+                                                       <div class="steps bg-primary lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
@@ -173,11 +173,11 @@
                                         </div>
                                         <div class="col-12 mt-4">
                                              <div class="row d-flex justify-content-center">
-                                                  <button class="btn btn-outline-success">
+                                                  <button class="btn btn-outline-primary">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
-                                                  <button class="btn btn-outline-success ml-4">
+                                                  <button class="btn btn-outline-primary ml-4">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
