--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="container app-section">
                <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-md-8 col-12">
-                         <ul class="nav nav-pills bg-white py-3 d-flex align-items-center justify-content-center" id="myTab" role="tablist" style="position: sticky; top: 1px; z-index: 5;">
+                         <ul class="nav nav-pills bg-white py-3 d-flex align-items-center justify-content-center" id="myTab" role="tablist" style="position: sticky; top: 0; z-index: 5;">
                               <li class="nav-item" role="presentation">
                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">First App</a>
                               </li>
