--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                          <div class="hero-text-container text-md-left text-center text-white pl-md-5">
                               <h1>App Name Here!</h1>
                               <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, est.</p>
-                              <button class="btn-lg btn btn-outline-light px-5">Download Now</button>
+                              <button class="btn-lg btn btn-outline-light px-5 rounded-0">Download Now</button>
                          </div>
                     </div>
                </div>
@@ -40,7 +40,7 @@
           <div class="container py-3">
                <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                         <p class="h3 text-primary font-weight-light" data-aos="fade-up">Point Of App</p>
+                         <p class="h3 text-success font-weight-light" data-aos="fade-up">Point Of App</p>
                          <p class="lead text-secondary font-weight-lighter" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis
                               obcaecati minima magni
                               iusto fuga.</p>
@@ -48,7 +48,7 @@
                               <div class="col-6 text-right">
                                    <div class="card border-0" data-aos="zoom-in">
                                         <div class="card-body border-right">
-                                             <p class="h3 text-primary font-weight-bold">1,000</p>
+                                             <p class="h3 text-danger font-weight-bold">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
                                         </div>
                                    </div>
@@ -56,7 +56,7 @@
                               <div class="col-6 text-left">
                                    <div class="card border-0" data-aos="zoom-in">
                                         <div class=" card-body border-left">
-                                             <p class="h3 text-primary font-weight-bold">1,000</p>
+                                             <p class="h3 text-danger font-weight-bold">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
                                         </div>
                                    </div>
@@ -75,10 +75,13 @@
                     <div class="col-md-8 col-12">
                          <ul class="nav nav-pills bg-white py-3 d-flex align-items-center justify-content-center" id="myTab" role="tablist" style="position: sticky; top: 0; z-index: 5;">
                               <li class="nav-item" role="presentation">
-                                   <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">First App</a>
+                                   <a class="nav-link active btn btn-outline-success rounded-0" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">First
+                                        App</a>
                               </li>
                               <li class="nav-item" role="presentation">
-                                   <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Second App</a>
+                                   <a class="nav-link btn btn-outline-success rounded-0" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                                        aria-selected="false">Second
+                                        App</a>
                               </li>
                          </ul>
                          <div class="tab-content" id="myTabContent">
@@ -96,29 +99,29 @@
                                              </div>
                                              <div class="col-12 col-md-6">
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-primary lead">
+                                                       <div class="steps bg-success lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
+                                                            <p class="h3 text-success font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-primary lead">
+                                                       <div class="steps bg-success lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
+                                                            <p class="h3 text-success font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-primary lead">
+                                                       <div class="steps bg-success lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
+                                                            <p class="h3 text-success font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
@@ -126,11 +129,11 @@
                                         </div>
                                         <div class="col-12 mt-4">
                                              <div class="row d-flex justify-content-center">
-                                                  <button class="btn btn-outline-primary">
+                                                  <button class="btn btn-outline-success rounded-0">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
-                                                  <button class="btn btn-outline-primary ml-4">
+                                                  <button class="btn btn-outline-success rounded-0 ml-4">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
@@ -152,20 +155,20 @@
                                              </div>
                                              <div class="col-12 col-md-6">
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-primary lead">
+                                                       <div class="steps bg-success lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
+                                                            <p class="h3 text-success font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
                                                   <div class="d-flex mb-5" data-aos="fade-up">
-                                                       <div class="steps bg-primary lead">
+                                                       <div class="steps bg-success lead">
                                                             1
                                                        </div>
                                                        <div class="pl-2 text-secondary small">
-                                                            <p class="h3 text-primary font-weight-lighter">Register</p>
+                                                            <p class="h3 text-success font-weight-lighter">Register</p>
                                                             <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
                                                        </div>
                                                   </div>
@@ -173,11 +176,11 @@
                                         </div>
                                         <div class="col-12 mt-4">
                                              <div class="row d-flex justify-content-center">
-                                                  <button class="btn btn-outline-primary">
+                                                  <button class="btn btn-outline-success">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
-                                                  <button class="btn btn-outline-primary ml-4">
+                                                  <button class="btn btn-outline-success ml-4">
                                                        <i class="fab fa-google-play pr-2"></i>
                                                        Download
                                                   </button>
